# 5G-Network-Data-Forecasting

./: README.md  analysis.ipynb  setup.cfg
cqiforecasting/configs/: config.py
cqiforecasting/dataloader/: nn_data_loader.py
cqiforecasting/executor/: inferer.py
cqiforecasting/models/: base_model.py  base_nn.py  bi_lstm_model.py  conv_bi_lstm_model.py  lstm_model.py
cqiforecasting/utils/: post_processor.py
data/UE1-CQI/: UE1-CQI_1.csv  UE1-CQI_10.csv  UE1-CQI_11.csv  UE1-CQI_12.csv  UE1-CQI_13.csv  UE1-CQI_2.csv  UE1-CQI_3.csv  UE1-CQI_4.csv  UE1-CQI_5.csv  UE1-CQI_6.csv  UE1-CQI_7.csv  UE1-CQI_8.csv  UE1-CQI_9.csv
data/UE2-CQI/: UE2-CQI_1.csv  UE2-CQI_10.csv  UE2-CQI_11.csv  UE2-CQI_12.csv  UE2-CQI_13.csv  UE2-CQI_2.csv  UE2-CQI_3.csv  UE2-CQI_4.csv  UE2-CQI_5.csv  UE2-CQI_6.csv  UE2-CQI_7.csv  UE2-CQI_8.csv  UE2-CQI_9.csv
data/UE3-CQI/: UE3-CQI_1.csv  UE3-CQI_10.csv  UE3-CQI_11.csv  UE3-CQI_12.csv  UE3-CQI_13.csv  UE3-CQI_2.csv  UE3-CQI_3.csv  UE3-CQI_4.csv  UE3-CQI_5.csv  UE3-CQI_6.csv  UE3-CQI_7.csv  UE3-CQI_8.csv  UE3-CQI_9.csv
notebooks/: data_split.ipynb  eda.ipynb  general_model_comparison.ipynb  lags_exp.ipynb
output/exported_models/models/: lstm_lags_MAEs.csv
scripts/: main.py
