[metadata]
name = cqiforecasting
version = 1.0
author = KareemElozeiri
author_email = k.elozeiri@gmail.com
description = Analysis and modelling of channel quality indicator for 5G network time series
long_description = file: README.md
long_description_content_type = text/markdown
url = project_url.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
packages = find:

[options.packages.find]
include = cqi-time-series-forecasting
